updates element widths: cascading issues from new spacing

--- a/asset/scss/bttf.scss
+++ b/asset/scss/bttf.scss
@@ -344,4 +344,9 @@ body.vertical-menu #content #blocks {
     @include xy-cell(6);
     @include xy-gutters($gutter-position: bottom);    
   }
+
+  .item.resource:only-child {
+    width: 100%;
+    margin: unset;    
+  }
 }
